Removed absolute paths

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,7 @@
 terraform.tfvars
 *.tfvars
 *.tfvars.json
-/Users/mwu/Documents/ee-data-eng-bootcamp-2025/gcp_secrets/ee-india-se-data-beaa0dcf6aec.json
-/Users/mwu/Documents/ee-data-eng-bootcamp-2025/sample_files/sample_file.txt
+
+# Ignore secrets and sample files by relative path
+gcp_secrets/
+sample_files/
