--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -78,3 +78,9 @@ jobs:
           else
             echo "Bucket exists. No need to create it."
           fi
+
+      - name: Deploy DAGs to GCS bucket
+        run: |
+          gsutil -m cp -r ./airflow/dags/* gs://${{ secrets.GCS_BUCKET_NAME }}/dags/
+
+
