--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,7 +21,10 @@ services:
       retries: 50
 
   airflow-webserver:
-    image: apache/airflow:2.7.3
+    image: apache/airflow:2.9.1
+    restart: always
+    env_file:
+      - .env
     depends_on:
       - postgres
       - redis
@@ -30,7 +33,6 @@ services:
       - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
       - AIRFLOW__CELERY__RESULT_BACKEND=db+postgresql://airflow:airflow@postgres/airflow
       - AIRFLOW__CELERY__BROKER_URL=redis://:@redis:6379/0
-      - AIRFLOW__CORE__FERNET_KEY=''
       - AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION=true
       - AIRFLOW__CORE__LOAD_EXAMPLES=false
     volumes:
@@ -48,7 +50,10 @@ services:
       retries: 5
 
   airflow-scheduler:
-    image: apache/airflow:2.7.3
+    image: apache/airflow:2.9.1
+    restart: always
+    env_file:
+      - .env
     depends_on:
       - airflow-webserver
     environment:
@@ -56,11 +61,9 @@ services:
       - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
       - AIRFLOW__CELERY__RESULT_BACKEND=db+postgresql://airflow:airflow@postgres/airflow
       - AIRFLOW__CELERY__BROKER_URL=redis://:@redis:6379/0
-      - AIRFLOW__CORE__FERNET_KEY=''
       - AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION=true
       - AIRFLOW__CORE__LOAD_EXAMPLES=false
-      - _PIP_ADDITIONAL_REQUIREMENTS=apache-airflow-providers-python
-
+      - _PIP_ADDITIONAL_REQUIREMENTS=apache-airflow-providers-google
     volumes:
       - ./airflow/dags:/opt/airflow/dags
       - ./airflow/logs:/opt/airflow/logs
@@ -69,7 +72,10 @@ services:
     command: scheduler
 
   airflow-worker:
-    image: apache/airflow:2.7.3
+    image: apache/airflow:2.9.1
+    restart: always
+    env_file:
+      - .env
     depends_on:
       - airflow-scheduler
     environment:
@@ -77,7 +83,6 @@ services:
       - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
       - AIRFLOW__CELERY__RESULT_BACKEND=db+postgresql://airflow:airflow@postgres/airflow
       - AIRFLOW__CELERY__BROKER_URL=redis://:@redis:6379/0
-      - AIRFLOW__CORE__FERNET_KEY=''
     volumes:
       - ./airflow/dags:/opt/airflow/dags
       - ./airflow/logs:/opt/airflow/logs
@@ -86,18 +91,23 @@ services:
     command: celery worker
 
   airflow-init:
-    image: apache/airflow:2.7.3
+    image: apache/airflow:2.9.1
     depends_on:
       - postgres
+      - redis
+    env_file:
+      - .env
     environment:
       - AIRFLOW__CORE__EXECUTOR=CeleryExecutor
       - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
       - AIRFLOW__CELERY__RESULT_BACKEND=db+postgresql://airflow:airflow@postgres/airflow
       - AIRFLOW__CELERY__BROKER_URL=redis://:@redis:6379/0
-      - AIRFLOW__CORE__FERNET_KEY=''
-      - AIRFLOW__CORE__LOAD_EXAMPLES=false
+    volumes:
+      - ./airflow/dags:/opt/airflow/dags
+      - ./airflow/logs:/opt/airflow/logs
+      - ./airflow/plugins:/opt/airflow/plugins
     command: version
-    entrypoint: ["bash", "-c", "airflow db init && airflow users create --username admin --password admin --firstname Anonymous --lastname Admin --role Admin --email admin@example.com"]
+    entrypoint: ["bash", "-c", "airflow db migrate && airflow users create --username admin --password admin --firstname Anonymous --lastname Admin --role Admin --email admin@example.com"]
 
 volumes:
   postgres-db-volume:
