--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -81,6 +81,60 @@ jobs:
           terraform -chdir=terraform apply -auto-approve -target=snowflake_schema.schema -target=snowflake_table.taxi_trips_raw
           fi
         
+  airflow-test:
+    name: Test Airflow DAGs
+    runs-on: ubuntu-latest
+    needs: terraform  # This ensures the Terraform job completes first
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install apache-airflow==2.11.0
+          pip install apache-airflow-providers-google==10.15.0
+          pip install snowflake-connector-python>=3.0.0
+          pip install apache-airflow-providers-snowflake
+
+      - name: Test DAG syntax
+        run: |
+          # Test each DAG file for syntax errors
+          for file in airflow/dags/*.py; do
+            echo "Testing $file..."
+            python -c "import sys; from airflow.models.dag import DAG; from airflow.utils.dag_cycle_tester import check_cycle; d = __import__('$file'.replace('/', '.').replace('.py', '')).dag; check_cycle(d); print('Syntax OK')"
+          done
+
+      - name: Configure Airflow Environment Variables
+        run: |
+          # Add Snowflake variables that your DAGs expect
+          export AIRFLOW__CORE__UNIT_TEST_MODE=True
+          export AIRFLOW_VAR_snowflake_account=${{ secrets.SNOWFLAKE_ACCOUNT_NAME }}
+          export AIRFLOW_VAR_snowflake_user=${{ secrets.SNOWFLAKE_USER }}
+          export AIRFLOW_VAR_snowflake_password=${{ secrets.SNOWFLAKE_PWD }}
+          export AIRFLOW_VAR_snowflake_warehouse=${{ secrets.SNOWFLAKE_WH }}
+          export AIRFLOW_VAR_snowflake_database=${{ secrets.SNOWFLAKE_DATABASE }}
+          export AIRFLOW_VAR_snowflake_schema=${{ secrets.SNOWFLAKE_SCHEMA }}
+          export AIRFLOW_VAR_snowflake_role=${{ secrets.SNOWFLAKE_ROLE }}
+          export AIRFLOW_VAR_bucket_name=${{ secrets.GCS_BUCKET_NAME }}
+          export AIRFLOW_VAR_taxi_trip_raw_table=${{ secrets.TAXI_TRIP_RAW_TABLE }}
+
+      - name: Validate DAGs with Airflow
+        run: |
+          # Initialize Airflow database
+          airflow db init
+          
+          # Parse all DAGs
+          airflow dags list
+          
+          # Additional tests as needed
+          # For example, you could run unit tests for your DAG tasks
 
 
 
