--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
-dbt==0.19.0
-dbt-snowflake
+# Core Airflow dependencies
+apache-airflow==2.11.0 # Pin to match your Airflow image version
+apache-airflow-providers-snowflake>=6.3.1  # Includes SnowflakeOperator, Hook, etc.
+apache-airflow-providers-google>=10.14.0   # If you're working with GCS buckets
+snowflake-connector-python>=3.10.1  # Required by the Snowflake provider
