--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -42,6 +42,8 @@ jobs:
           echo "TF_VAR_snowflake_database=${{ secrets.SNOWFLAKE_DATABASE }}" >> $GITHUB_ENV
           echo "TF_VAR_snowflake_schema=${{ secrets.SNOWFLAKE_SCHEMA }}" >> $GITHUB_ENV
           echo "TF_VAR_snowflake_org=${{ secrets.SNOWFLAKE_ORG }}" >> $GITHUB_ENV
+          echo "TF_VAR_snowflake_org=${{ secrets.SNOWFLAKE_STORAGE_INTEGRATION }}" >> $GITHUB_ENV
+
 
       # Set the environment variable for sample_file_name
       - name: Set Terraform Variables
