--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -44,12 +44,13 @@ jobs:
           echo "TF_VAR_snowflake_org=${{ secrets.SNOWFLAKE_ORG }}" >> $GITHUB_ENV
           echo "TF_VAR_snowflake_storage_integration=${{ secrets.SNOWFLAKE_STORAGE_INTEGRATION }}" >> $GITHUB_ENV
 
-
       # Set the environment variable for sample_file_name
       - name: Set Terraform Variables
         run: | 
           echo "TF_VAR_sample_file_name=${{ secrets.SAMPLE_FILE_NAME }}" >> $GITHUB_ENV
           echo "TF_VAR_taxi_trip_raw_table=${{ secrets.TAXI_TRIP_RAW_TABLE }}" >> $GITHUB_ENV
+          echo "TF_VAR_taxi_trip_staging_table=${{ secrets.TAXI_TRIP_STAGE_TABLE}}" >> $GITHUB_ENV
+
 
       # Debug Variables
       - name: Debug variables
