--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -72,7 +72,13 @@ jobs:
       -  name: Terraform Plan
          run: terraform -chdir=terraform plan
 
-      # Terrafrom import Schema (only if it exists)
+      # GCS Bucket status (only if it exists) checks
+      - name: Import existing GCS bucket if it exists
+        run: |
+          BUCKET_NAME="${{ secrets.GCS_BUCKET_NAME }}"
+          terraform -chdir=terraform import google_storage_bucket.landing_bucket "$BUCKET_NAME" || echo "Bucket not found, will be created"
+
+      # Snowflake Schema (only if it exists) checks
       - name: Import existing Snowflake schema if it exists
         run: |
           # Attempt to import the schema only if it already exists
@@ -80,6 +86,14 @@ jobs:
           
           # Try to import it; ignore error if it doesn't exist
           terraform -chdir=terraform import snowflake_schema.schema "$SCHEMA_ID" || echo "Schema not found, will be created by Terraform"
+
+      # Snowflake File format (only if it exists) checks
+      - name: Import existing Snowflake file format if it exists
+        run: |
+          # Format: <database>|<schema>|<file_format_name>
+          FILE_FORMAT_ID="${{ secrets.SNOWFLAKE_DATABASE }}|${{ secrets.SNOWFLAKE_SCHEMA }}|CSV_FORMAT"
+          terraform -chdir=terraform import snowflake_file_format.csv_format "$FILE_FORMAT_ID" || echo "File format not found, will be created"
+
 
       # Terraform Apply (Only on Pushes)
       - name: Terraform Apply
