Fix Attempt 3: terraform backend.tf

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -98,7 +98,7 @@ jobs:
       - name: Import existing Snowflake file format if it exists
         run: |
           # Format: <database>|<schema>|<file_format_name>
-          FILE_FORMAT_ID="${{ secrets.SNOWFLAKE_DATABASE }}.${{ secrets.SNOWFLAKE_SCHEMA }}|CSV_FORMAT"
+          FILE_FORMAT_ID="${{ secrets.SNOWFLAKE_DATABASE }}.${{ secrets.SNOWFLAKE_SCHEMA }}.CSV_FORMAT"
           terraform -chdir=terraform import snowflake_file_format.csv_format "$FILE_FORMAT_ID" || echo "File format not found, will be created"
 
 
