--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -132,7 +132,36 @@ jobs:
           # terraform -chdir=terraform apply -auto-approve -target=snowflake_schema.schema -target=snowflake_table.taxi_trips_raw
           terraform -chdir=terraform apply -auto-approve
           fi
-        
+
+  dbt:
+    runs-on: ubuntu-latest
+    needs: terraform  # <-- This ensures Terraform finishes first
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install dbt dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install dbt-snowflake  # Or your adapter, e.g., dbt-postgres
+
+      - name: Install dbt packages
+        run: dbt deps  # <--- This pulls dbt-expectations and others from packages.yml
+
+      - name: Run dbt debug (optional sanity check)
+        run: dbt debug
+
+      - name: Run dbt tests
+        run: dbt test
+
+      - name: Run dbt models
+        run: dbt run
+
   airflow-test:
     name: Test Airflow DAGs
     runs-on: ubuntu-latest
