--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ terraform.tfvars
 # Ignore secrets and sample files by relative path
 gcp_secrets/
 resources/
+snowflake_secrets/
 
 # Airflow
 airflow/logs/
