--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 # Core Airflow dependencies
-apache-airflow==2.11.0 # Pin to match your Airflow image version
-apache-airflow-providers-snowflake>=6.3.1  # Includes SnowflakeOperator, Hook, etc.
-apache-airflow-providers-google>=10.14.0   # If you're working with GCS buckets
-snowflake-connector-python>=3.10.1  # Required by the Snowflake provider
+# apache-airflow==2.11.0                      # Airflow image version
+
+# Snowflake Provider
+apache-airflow-providers-snowflake>=6.3.1   # Includes SnowflakeOperator, Hook, etc.
+snowflake-connector-python>=3.10.1          # Required by the Snowflake provider
+
+# Google Provider
+apache-airflow-providers-google>=10.14.0    # GCS buckets
+
+# dbt sqlparse>=0.5.1
+dbt-core>=1.6.0
+dbt-snowflake>=1.6.0
