--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -142,22 +142,35 @@ jobs:
         with:
           python-version: '3.11'
 
+      # Add Snowflake environment variables for dbt
+      - name: Set dbt environment variables
+        run: |
+          echo "SNOWFLAKE_ACCOUNT=${{ secrets.SNOWFLAKE_ACCOUNT_NAME }}" >> $GITHUB_ENV
+          echo "SNOWFLAKE_USER=${{ secrets.SNOWFLAKE_USER }}" >> $GITHUB_ENV
+          echo "SNOWFLAKE_PRIVATE_KEY=${{ secrets.SNOWFLAKE_PRIVATE_KEY }}" >> $GITHUB_ENV
+          echo "SNOWFLAKE_ROLE=${{ secrets.SNOWFLAKE_ROLE }}" >> $GITHUB_ENV
+          echo "SNOWFLAKE_WAREHOUSE=${{ secrets.SNOWFLAKE_WH }}" >> $GITHUB_ENV
+          echo "SNOWFLAKE_DATABASE=${{ secrets.SNOWFLAKE_DATABASE }}" >> $GITHUB_ENV
+          echo "SNOWFLAKE_SCHEMA=${{ secrets.SNOWFLAKE_SCHEMA }}" >> $GITHUB_ENV
+
       - name: Install dbt dependencies
         run: |
           python -m pip install --upgrade pip
           pip install dbt-snowflake  # Or your adapter, e.g., dbt-postgres
 
       - name: Install dbt packages
+        working-directory: dbt_project
         run: dbt deps  # <--- This pulls dbt-expectations and others from packages.yml
 
       - name: Run dbt debug (optional sanity check)
+        working-directory: dbt_project
         run: dbt debug
 
       - name: Run dbt tests
+        working-directory: dbt_project
         run: dbt test
 
       - name: Run dbt models
-        run: dbt run
 
   airflow-test:
     name: Test Airflow DAGs
@@ -195,7 +208,7 @@ jobs:
           export AIRFLOW__CORE__UNIT_TEST_MODE=True
           export AIRFLOW_VAR_snowflake_account=${{ secrets.SNOWFLAKE_ACCOUNT_NAME }}
           export AIRFLOW_VAR_snowflake_user=${{ secrets.SNOWFLAKE_USER }}
-          export AIRFLOW_VAR_snowflake_password=${{ secrets.SNOWFLAKE_PWD }}
+          export AIRFLOW_VAR_snowflake_private_key=${{ secrets.SNOWFLAKE_PRIVATE_KEY }}
           export AIRFLOW_VAR_snowflake_warehouse=${{ secrets.SNOWFLAKE_WH }}
           export AIRFLOW_VAR_snowflake_database=${{ secrets.SNOWFLAKE_DATABASE }}
           export AIRFLOW_VAR_snowflake_schema=${{ secrets.SNOWFLAKE_SCHEMA }}
@@ -211,6 +224,3 @@ jobs:
           # Parse all DAGs
           airflow dags list
           
-          # Additional tests as needed
-          # For example, you could run unit tests for your DAG tasks
-
