--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -41,13 +41,19 @@ jobs:
         run: |
           echo "TF_VAR_snowflake_account_name=${{ secrets.SNOWFLAKE_ACCOUNT_NAME }}" >> $GITHUB_ENV
           echo "TF_VAR_snowflake_user=${{ secrets.SNOWFLAKE_USER }}" >> $GITHUB_ENV
-          echo "TF_VAR_snowflake_private_key=${{ secrets.SNOWFLAKE_PRIVATE_KEY }}" >> $GITHUB_ENV
           echo "TF_VAR_snowflake_role=${{ secrets.SNOWFLAKE_ROLE }}" >> $GITHUB_ENV
           echo "TF_VAR_snowflake_wh=${{ secrets.SNOWFLAKE_WH }}" >> $GITHUB_ENV
           echo "TF_VAR_snowflake_database=${{ secrets.SNOWFLAKE_DATABASE }}" >> $GITHUB_ENV
           echo "TF_VAR_snowflake_schema=${{ secrets.SNOWFLAKE_SCHEMA }}" >> $GITHUB_ENV
           echo "TF_VAR_snowflake_org=${{ secrets.SNOWFLAKE_ORG }}" >> $GITHUB_ENV
           echo "TF_VAR_snowflake_storage_integration=${{ secrets.SNOWFLAKE_STORAGE_INTEGRATION }}" >> $GITHUB_ENV
+
+      # Set Snowflake private key (using separate step to handle multiline content properly)
+      - name: Set Snowflake private key
+        run: |
+          cat <<'EOF' >> $GITHUB_ENV
+          TF_VAR_snowflake_private_key=${{ secrets.SNOWFLAKE_PRIVATE_KEY }}
+          EOF
 
       # Set the environment variable for sample_file_name
       - name: Set Terraform Variables
