--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -52,9 +52,9 @@ jobs:
       - name: Set Snowflake private key
         env:
           key: |
-            ${{ secrets.SNOWFLAKE_PRIVATE_KEY }}
-        run: |
-          echo "TF_VAR_snowflake_private_key=${{ secrets.SNOWFLAKE_PRIVATE_KEY }}" >> $GITHUB_ENV
+            TF_VAR_snowflake_private_key=${{ secrets.SNOWFLAKE_PRIVATE_KEY }}
+#        run: |
+#          echo "TF_VAR_snowflake_private_key=${{ secrets.SNOWFLAKE_PRIVATE_KEY }}" >> $GITHUB_ENV
 
       # Set the environment variable for sample_file_name
       - name: Set Terraform Variables
