--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -53,11 +53,11 @@ jobs:
         env:
           PRIVATE_KEY: ${{ secrets.SNOWFLAKE_PRIVATE_KEY }}
         run: |
-          echo "TF_VAR_snowflake_private_content<<EOF" >> $GITHUB_ENV
+          echo "$PRIVATE_KEY"
           echo "$PRIVATE_KEY" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
-
-
+          echo "$GIHUB_ENV"
+          echo "TF_VAR_snowflake_private_key=$PRIVATE_KEY"
+          echo "TF_VAR_snowflake_private_key"
       # Set the environment variable for sample_file_name
       - name: Set Terraform Variables
         run: | 
