--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -132,10 +132,11 @@ jobs:
         run: |
           if ! gcloud storage buckets describe gs://${{ secrets.GCS_BUCKET_NAME }} --format="value(name)" ; then
             echo "Bucket does not exist. Creating all resources..."
-            terraform -chdir=terraform apply -var-file="terraform.tfvars" -auto-approve
+            terraform -chdir=terraform apply -auto-approve
+
           else
             echo "Bucket exists. Applying other changes..."
-            terraform -chdir=terraform apply -var-file="terraform.tfvars" -auto-approve
+            terraform -chdir=terraform apply -auto-approve
           fi
 
   dbt:
