--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -142,6 +142,14 @@ jobs:
   dbt:
     runs-on: ubuntu-latest
     needs: terraform  # <-- This ensures Terraform finishes first
+    env:
+      DBT_snowflake_account=${{ secrets.SNOWFLAKE_ACCOUNT_NAME }}
+      DBT_snowflake_user=${{ secrets.SNOWFLAKE_USER }}
+      DBT_snowflake_pwd=${{ secrets.SNOWFLAKE_PASSWORD }}
+      DBT_snowflake_role=${{ secrets.SNOWFLAKE_ROLE }}
+      DBT_snowflake_warehouse=${{ secrets.SNOWFLAKE_WH }}
+      DBT_snowflake_database=${{ secrets.SNOWFLAKE_DATABASE }}
+      DBT_snowflake_schema=${{ secrets.SNOWFLAKE_SCHEMA }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -151,26 +159,6 @@ jobs:
         with:
           python-version: '3.11'
 
-      # Add Snowflake environment variables for dbt
-      - name: Set dbt environment variables
-        run: |
-          echo "DBT_SNOWFLAKE_ACCOUNT=${{ secrets.SNOWFLAKE_ACCOUNT_NAME }}" >> $GITHUB_ENV
-          echo "DBT_SNOWFLAKE_USER=${{ secrets.SNOWFLAKE_USER }}" >> $GITHUB_ENV
-          echo "DBT_SNOWFLAKE_pwd=${{ secrets.SNOWFLAKE_PASSWORD }}" >> $GITHUB_ENV
-          echo "DBT_SNOWFLAKE_ROLE=${{ secrets.SNOWFLAKE_ROLE }}" >> $GITHUB_ENV
-          echo "DBT_SNOWFLAKE_WAREHOUSE=${{ secrets.SNOWFLAKE_WH }}" >> $GITHUB_ENV
-          echo "DBT_SNOWFLAKE_DATABASE=${{ secrets.SNOWFLAKE_DATABASE }}" >> $GITHUB_ENV
-          echo "DBT_SNOWFLAKE_SCHEMA=${{ secrets.SNOWFLAKE_SCHEMA }}" >> $GITHUB_ENV
-
-      # Set Snowflake private key for dbt (using separate step to handle multiline content properly)
-      - name: Set Snowflake private key
-        env:
-          PRIVATE_KEY: ${{ secrets.SNOWFLAKE_PRIVATE_KEY }}
-        run: |
-          echo "TF_VAR_snowflake_private_key<<EOF" >> $GITHUB_ENV
-          echo "$PRIVATE_KEY" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
-
       - name: Install dbt dependencies
         run: |
           python -m pip install --upgrade pip
@@ -179,10 +167,6 @@ jobs:
       - name: Install dbt packages
         working-directory: dbt_project
         run: dbt deps  # <--- This pulls dbt-expectations and others from packages.yml
-
-      - name: Run dbt debug (optional sanity check)
-        working-directory: dbt_project
-        run: dbt debug
 
       - name: Run dbt tests
         working-directory: dbt_project
