fixed dbt<->Airflow 2

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -193,7 +193,7 @@ services:
       _AIRFLOW_DB_MIGRATE: 'true'
       _AIRFLOW_WWW_USER_CREATE: 'true'
       _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME:-airflow}
-      _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD:-airflow}
+      _AIRFLOW_WWW_USER_PWD: ${_AIRFLOW_WWW_USER_PWD:-airflow}
       AIRFLOW__WEBSERVER__SECRET_KEY: ${AIRFLOW__WEBSERVER__SECRET_KEY}
       _PIP_ADDITIONAL_REQUIREMENTS: ''
     user: "0:0"
