--- a/dbt_project/packages.yml
+++ b/dbt_project/packages.yml
@@ -1,3 +1,5 @@
 packages:
   - package: calogica/dbt_expectations
     version: [">=0.8.0"]
+  - package: dbt-labs/dbt_utils
+    version: [">=1.1.0", "<2.0.0"]
