Fix Airflow Github Action job

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -204,7 +204,7 @@ jobs:
           export AIRFLOW__CORE__UNIT_TEST_MODE=True
           export AIRFLOW_VAR_snowflake_account=${{ secrets.SNOWFLAKE_ACCOUNT_NAME }}
           export AIRFLOW_VAR_snowflake_user=${{ secrets.SNOWFLAKE_USER }}
-          export AIRFLOW_VAR_snowflake_pwd=${{ secrets.SNOWFLAKE_PWD }}" >> $GITHUB_ENV
+          export AIRFLOW_VAR_snowflake_pwd=${{ secrets.SNOWFLAKE_PWD }}
           export AIRFLOW_VAR_snowflake_warehouse=${{ secrets.SNOWFLAKE_WH }}
           export AIRFLOW_VAR_snowflake_database=${{ secrets.SNOWFLAKE_DATABASE }}
           export AIRFLOW_VAR_snowflake_schema=${{ secrets.SNOWFLAKE_SCHEMA }}
