Fix reloading the same files

--- a/dbt_project/dbt_project.yml
+++ b/dbt_project/dbt_project.yml
@@ -11,3 +11,9 @@ clean-targets: ["target", "dbt_modules"]
 # models:
 #   taxi_dbt_project:
 #     +materialized: view
+models:
+  taxi_dbt_project:
+    staging:     # corresponds to models/staging/
+      +materialized: incremental
+    core:        # corresponds to models/core/
+      +materialized: incremental
