--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -212,11 +212,7 @@ jobs:
 
       - name: Validate DAGs with Airflow
         run: |
-          # Initialize Airflow database
+          export AIRFLOW_HOME=$(pwd)
           airflow db init
-          
-          # Parse all DAGs
           airflow dags list
-
-          # Trigger Dag
-          airflow dags trigger taxi_trips.py
+          airflow dags trigger taxi_trips
